# 3DFeatureMatcher

./: 3DFeatureMatcher.kdev4  CMakeLists.txt  README.md  main.cpp  mosaic.cpp  mosaic.h  pclvisualizerthread.cpp  pclvisualizerthread.h  tools.cpp  tools.h
.kdev4/: 3DFeatureMatcher.kdev4
DescriptorsMatcher/: descriptorsmatcher.cpp  descriptorsmatcher.h
Triangulator/: neighborhoodsgenerator.cpp  neighborhoodsgenerator.h  normaloptimizer.cpp  normaloptimizer.h  singlecameratriangulator.cpp  singlecameratriangulator.h
results/64px4l.25c.16e_img1/: image1pixels.pgm  patch_0.pgm  patch_1.pgm  patch_10.pgm  patch_11.pgm  patch_12.pgm  patch_13.pgm  patch_14.pgm  patch_2.pgm  patch_3.pgm  patch_4.pgm  patch_5.pgm  patch_6.pgm  patch_7.pgm  patch_8.pgm  patch_9.pgm
results/64px4l.25c.16e_img2/: patch_0.pgm  patch_1.pgm  patch_10.pgm  patch_11.pgm  patch_12.pgm  patch_13.pgm  patch_14.pgm  patch_2.pgm  patch_3.pgm  patch_4.pgm  patch_5.pgm  patch_6.pgm  patch_7.pgm  patch_8.pgm  patch_9.pgm
results/64px4l.5c.32e_img1/: patch_0.pgm  patch_1.pgm  patch_10.pgm  patch_11.pgm  patch_12.pgm  patch_13.pgm  patch_14.pgm  patch_2.pgm  patch_3.pgm  patch_4.pgm  patch_5.pgm  patch_6.pgm  patch_7.pgm  patch_8.pgm  patch_9.pgm
results/64px4l.5c.32e_img2/: patch_0.pgm  patch_1.pgm  patch_10.pgm  patch_11.pgm  patch_12.pgm  patch_13.pgm  patch_14.pgm  patch_2.pgm  patch_3.pgm  patch_4.pgm  patch_5.pgm  patch_6.pgm  patch_7.pgm  patch_8.pgm  patch_9.pgm
results/64px4l1c.64e_img1/: image2pixels.pgm  patch_0.pgm  patch_1.pgm  patch_10.pgm  patch_11.pgm  patch_12.pgm  patch_13.pgm  patch_14.pgm  patch_2.pgm  patch_3.pgm  patch_4.pgm  patch_5.pgm  patch_6.pgm  patch_7.pgm  patch_8.pgm  patch_9.pgm
results/64px4l1c.64e_img2/: patch_0.pgm  patch_1.pgm  patch_10.pgm  patch_11.pgm  patch_12.pgm  patch_13.pgm  patch_14.pgm  patch_2.pgm  patch_3.pgm  patch_4.pgm  patch_5.pgm  patch_6.pgm  patch_7.pgm  patch_8.pgm  patch_9.pgm
results/differentprojRT_64px3l.25c.16e_img1/: patch_0.pgm  patch_1.pgm  (+19 more)
(+9 files in other folders)
